# medinet_wiki

./: .gitignore  package.json
Hub_All/api/: .coveragerc-critical  .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
Hub_All/api/app/: config.py  logging_config.py  main.py
Hub_All/api/app/auth/: __init__.py  _blacklist.py  api_key.py  dependencies.py  jwks.py  jwt.py  password.py  role.py  router.py  schemas.py  service.py
Hub_All/api/app/db/: __init__.py  base.py  dsn.py  mixins.py  session.py  types.py
Hub_All/api/app/mcp/: auth.py  schemas.py  server.py
Hub_All/api/app/middleware/: __init__.py  error_handler.py  rate_limit.py  request_id.py  security_headers.py
Hub_All/api/app/models/: __init__.py  audit.py  auth.py  chunk.py  document.py  hub.py  mcp_oauth.py  settings.py  usage.py
Hub_All/api/app/observability/: __init__.py  checksum_scheduler.py  metrics.py  middleware.py
Hub_All/api/app/pkg/: crypto.py  response.py
Hub_All/api/app/rag/: __init__.py  flow.py  setup.py
Hub_All/api/app/repositories/: __init__.py  hub_isolation.py
Hub_All/api/app/routers/: __init__.py  ai_chat.py  api_keys.py  ask.py  audit_logs.py  document_versions.py  documents.py  guides.py  hubs.py  mcp_oauth.py  profile.py  rag_config.py  search.py  sync.py  system_settings.py  usage.py  users.py
Hub_All/api/app/schemas/: __init__.py  api_keys.py  ask.py  audit.py  documents.py  guides.py  hubs.py  mcp_oauth.py  rag_config.py  search.py  system_settings.py  usage.py  users.py
Hub_All/api/app/services/: __init__.py  api_key_service.py  ask_prompt.py  ask_service.py  audit_query_service.py  audit_service.py  document_version_service.py  documents_service.py  email_service.py  embedder.py  file_extract.py  file_store.py  guide_service.py  hub_service.py  mcp_oauth_service.py  rag_config_service.py  search_cache.py  search_service.py  system_settings_service.py  usage_service.py  user_service.py  vn_chunker.py  watchdog.py
Hub_All/api/app/settings_sync/: __init__.py  client.py  keys.py  metrics.py  subscriber.py
Hub_All/api/app/sync/: __init__.py  keys.py  metrics.py  models.py  worker.py
Hub_All/api/migrations/: env.py
Hub_All/api/migrations/versions/: 0001_initial_schema.py  0002_phase4_documents_indexes.py  0003_phase5_schema_reconcile.py  0004_mcp_oauth_clients.py  0005_sync_outbox_per_hub.py  0006_role_hub_admin.py  0007_document_versions.py  0008_guides.py
Hub_All/api/scripts/: alembic-head-check.sh  alembic-smoke.sh  cocoindex_setup.py  generate_keys.sh  hub-add.sh  hub-init.sh  init-db.sh  m2a_demo.sh  stop_dev.ps1  verify_jwt_format.sh  verify_keys.sh
Hub_All/api/scripts/smoke/: boot_stack.sh  contract_diff.py
Hub_All/api/tests/: conftest.py  test_main.py  test_middleware.py
Hub_All/api/tests/integration/: __init__.py  conftest.py  conftest_eval.py  conftest_hardening.py  test_alembic_ignores_cocoindex_schema.py  test_argon2_cross_compat.py  test_ask_api.py  test_audit_actor_metadata.py  test_audit_logger.py  test_auth_login.py  test_auth_refresh_race.py  test_chunks_hnsw_cosine_ops.py  test_critical_path_coverage.py  test_dep_hubs_scope.py  test_dep_users_scope.py  test_document_versions.py  test_documents_list_delete.py  test_documents_upload.py  test_eval_pipeline.py  test_factor_hub_scoped.py  test_hub_isolation.py  test_hub_isolation_db_level.py  test_hubs_internal_endpoint.py  test_ingest_e2e.py  test_jwks_cache_lifecycle.py  test_jwt_compat.py  test_mcp_oauth_client.py  test_metrics_endpoint.py  test_migration_0006_idempotent.py  test_migration_0007_idempotent.py  test_migration_upgrade_downgrade.py  test_phase4_migration.py  test_rag_config_hotswap.py  test_rate_limit.py  test_rbac_dependency.py  test_search_hub_isolation.py  test_settings_sync_lifespan_integration.py  test_settings_sync_pubsub_e2e.py  test_smoke_e2e_v3_1_rbac.py  test_smoke_golden_path.py  (+4 more)
Hub_All/api/tests/unit/: conftest.py  test_ai_chat.py  test_alembic_env_hub_arg.py  test_api_keys_verify_endpoint.py  test_apikey_search_ask_auth.py  test_ask_prompt.py  test_audit_actor_scope.py  test_auth_router_hub_redirect.py  test_checksum_scheduler.py  test_config_hub_name.py  test_config_hub_name_dynamic.py  test_config_jwks.py  test_config_phase4_fields.py  test_config_settings_proxy_secret.py  test_document_version_service.py  test_document_versions_router.py  test_email_service.py  test_embedder.py  test_file_extract.py  test_file_store.py  test_flow_per_hub_naming.py  test_get_current_user_jwks_branch.py  test_hub_isolation.py  test_hubs_apikey_list.py  test_hubs_router_defensive_admin_invariant.py  test_jwks_cache.py  test_jwks_publish.py  test_jwt.py  test_jwt_iss_aud_hub_ids.py  test_logging_config.py  test_main_factory.py  test_metrics.py  test_password.py  test_rag_config_dim_guard.py  (+22 more)
Hub_All/docling-pipeline/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
Hub_All/docling-pipeline/tests/: conftest.py  test_extract.py  test_health.py  test_limits.py  test_logging.py  test_ocr.py  test_table_figure.py
Hub_All/eval/: .env.example  .gitignore  README.md  baseline.py  baseline_native.json  lib.py  metrics.py  pyproject.toml  queries.jsonl  report.py  rerun_search_only.py  run_compare.py  run_docling.py  run_eval.py  run_extraction_compare.py  run_retrieval_eval.py
Hub_All/eval/dataset/: DATASET.md  QUERIES_REVIEW.md  headings.json  queries.jsonl
Hub_All/eval/scripts/: build_scanned.py  cleanup.py  extract_headings.py  seed_hub.sql
Hub_All/eval/tests/: test_metrics.py  test_report.py
Hub_All/mcp_service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
Hub_All/mcp_service/mcp_app/: api_client.py  auth.py  config.py  schemas.py  server.py
Hub_All/mcp_service/scripts/: test_oauth_flow.py
Hub_All/mcp_service/tests/: conftest.py  test_api_client.py  test_auth.py  test_config.py  test_cors_split_policy.py  test_create_client_cli.py  test_integration_tools.py  test_oauth_login.py  test_oauth_per_user_bind.py  test_oauth_provider.py  test_oauth_store.py  test_path_prefix_wrapper.py  test_server.py
(+749 files in other folders)
