[project]
name = "medinet-wiki-api"
version = "0.1.0"
description = "Medinet Wiki M2 API — FastAPI + CocoIndex + pgvector"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web framework
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic[email]>=2.7.0,<3",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.12",

    # RAG core
    "cocoindex==1.0.3",
    "litellm>=1.82,<2",
    "pgvector==0.4.2",

    # Database
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "alembic==1.18.4",
    "redis>=7.1.1,<8",

    # Auth
    "pyjwt[crypto]>=2.12,<3",
    "pwdlib[argon2]==0.3.0",
    "argon2-cffi>=25.1.0",

    # Document parsing (no OCR — D4)
    "pypdf>=5.0,<6",
    "python-docx==1.2.0",
    "markdown-it-py>=3,<4",
    "chardet>=5,<6",

    # Observability + util
    "structlog>=25.0,<26",
    "tenacity>=9,<10",
    "typer>=0.12,<1",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "asgi-lifespan>=2,<3",
    "anyio>=4,<5",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "pre-commit>=3,<4",
    # Integration test infrastructure (Phase 2 Plan 05 — testcontainers Postgres pgvector pg16)
    "testcontainers[postgres]>=4.7,<5",
    "psycopg2-binary>=2.9,<3",
]
prod = [
    "gunicorn>=23,<24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C90", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cocoindex.*", "litellm.*", "pgvector.*", "pwdlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "critical: critical path test (auth, hub isolation, ingest, search, ask)",
    "integration: integration test requires Postgres + Redis testcontainers",
]
addopts = "-ra --strict-markers"
