[project]
name = "docling-pipeline"
version = "0.1.0"
description = "Medinet Docling sidecar — extract + chunk Python service cho RAG ingestion"
requires-python = ">=3.11,<3.12"
dependencies = [
    "docling==2.91.0",
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "tiktoken>=0.8",
    "pydantic-settings>=2.6",
    "pydantic>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "slow: test cần Docling models warm + Tesseract install (skip với -m 'not slow')",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
