[project]
name = "medinet-eval"
version = "0.1.0"
description = "Eval dataset + baseline measurement scripts cho Medinet Wiki RAG (M1)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "python-docx>=1.1",
    "pypdf>=5.0",
    "pdf2image>=1.17",
    "img2pdf>=0.5",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line-length đã set qua [tool.ruff]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
