[project]
name = "medinet-wiki-mcp-service"
version = "0.1.0"
description = "Medinet Wiki MCP Service — process độc lập expose RAG tools qua MCP, gọi API Service qua HTTP"
requires-python = ">=3.11,<3.13"
dependencies = [
    # MCP SDK — cùng pin với api/pyproject.toml để tránh divergence
    "mcp>=1.27.0,<1.28",
    # HTTP client gọi API Service
    "httpx>=0.27,<1",
    # Schema + config
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.6,<3",
    # OAuth state store cục bộ — KHÔNG chạm DB chung (Phase 8.2 boundary)
    "aiosqlite>=0.20,<1",
    # ASGI server — khai báo tường minh cho Dockerfile CMD --factory
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    # Mock httpx cho test ApiClient
    "respx>=0.21,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C90", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "critical: test path quan trọng — auth fail / hub isolation / happy path lõi",
]
